...
				.tag(SharedProjectsView.tag)
				.tabItem {
					Image(systemName: "person.3")
					Text("Community")
				}

			Text("Reset")
				.tag("Reset")
				.tabItem {
					Image(systemName: "trash.slash.fill")
					Text("Reset")
				}
		}
		.onAppear(perform: persistence.appLaunched)
		.onContinueUserActivity(CSSearchableItemActionType, perform: moveToHome)
		.onContinueUserActivity(newProjectActivity, perform: createProject)
		.userActivity(newProjectActivity) { activity in
			activity.title = "New Project"

			#if os(iOS) || os(watchOS)
				activity.isEligibleForPrediction = true
			#endif
		}
		.onOpenURL(perform: openURL)
...
