...
		GridItem(.adaptive(minimum: 44))
	]

    var body: some View {
		Form {
			Section(header: Text("Basic settings")) {
				TextField("Project name", text: $title.onChange(update))
				TextField("Description of this project", text: $detail.onChange(update))
			}

			Section(header: Text("Custom project color")) {
				LazyVGrid(columns: colorColumns) {
					ForEach(Project.colors, id: \.self, content: colorButton)
...

				Button("Delete this project") {
					showingDeleteConfirm.toggle()
				}
				.accentColor(.red)
			}		}
		.navigationTitle("Edit Project")
		.onDisappear(perform: persistence.save)
		.alert(isPresented: $showingDeleteConfirm) {
			Alert(title: Text("Delete project?"),
				  message: Text("Are you sure you want to delete this project? You will also delete all the items it contains."),
				  primaryButton: .default(Text("Delete"),
				  action: delete), secondaryButton: .cancel())
...
